--- a/src/jupyter/notebooks/test_stock_economic_correlations.ipynb
+++ b/src/jupyter/notebooks/test_stock_economic_correlations.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "eabc4662-ab35-46df-b9e6-dabb1e06fc2d",
    "metadata": {},
    "outputs": [],
@@ -36,12 +36,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "61f3d4b5-dc4d-4fff-a7bd-dd370173f57f",
    "metadata": {},
    "outputs": [],
    "source": [
     "engine = create_engine('postgresql://postgres:postgres@postgres:5432/pipelines')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5f04f2e9-a1c0-4c58-90cf-eecb1d4bbbb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Date      Open      High       Low     Close  Adj Close     Volume  \\\n",
+      "0  1989-06-12  0.417411  0.426339  0.412946  0.424107   0.333400   80864000   \n",
+      "1  1989-06-13  0.424107  0.435268  0.419643  0.433036   0.340419  230977600   \n",
+      "2  1989-06-14  0.437500  0.448661  0.430804  0.443080   0.348315  251305600   \n",
+      "3  1989-06-15  0.441964  0.444196  0.424107  0.424107   0.333400  161403200   \n",
+      "4  1989-06-16  0.399554  0.406250  0.388393  0.397321   0.312343  542001600   \n",
+      "5  1989-06-19  0.397321  0.399554  0.388393  0.392857   0.308833  183120000   \n",
+      "6  1989-06-20  0.392857  0.392857  0.377232  0.383929   0.301815  134534400   \n",
+      "7  1989-06-21  0.383929  0.388393  0.377232  0.379464   0.298305  129864000   \n",
+      "8  1989-06-22  0.379464  0.390625  0.375000  0.386161   0.303570  137200000   \n",
+      "9  1989-06-23  0.386161  0.395089  0.386161  0.391741   0.307956  123894400   \n",
+      "\n",
+      "  Ticker Company Name              Industry      Sector     Market Cap  \\\n",
+      "0   AAPL   Apple Inc.  Consumer Electronics  Technology  2949130747904   \n",
+      "1   AAPL   Apple Inc.  Consumer Electronics  Technology  2949130747904   \n",
+      "2   AAPL   Apple Inc.  Consumer Electronics  Technology  2949130747904   \n",
+      "3   AAPL   Apple Inc.  Consumer Electronics  Technology  2949130747904   \n",
+      "4   AAPL   Apple Inc.  Consumer Electronics  Technology  2949130747904   \n",
+      "5   AAPL   Apple Inc.  Consumer Electronics  Technology  2949130747904   \n",
+      "6   AAPL   Apple Inc.  Consumer Electronics  Technology  2949130747904   \n",
+      "7   AAPL   Apple Inc.  Consumer Electronics  Technology  2949130747904   \n",
+      "8   AAPL   Apple Inc.  Consumer Electronics  Technology  2949130747904   \n",
+      "9   AAPL   Apple Inc.  Consumer Electronics  Technology  2949130747904   \n",
+      "\n",
+      "   Total Revenue  Net Income  \n",
+      "0   381623009280           0  \n",
+      "1   381623009280           0  \n",
+      "2   381623009280           0  \n",
+      "3   381623009280           0  \n",
+      "4   381623009280           0  \n",
+      "5   381623009280           0  \n",
+      "6   381623009280           0  \n",
+      "7   381623009280           0  \n",
+      "8   381623009280           0  \n",
+      "9   381623009280           0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"SELECT * FROM raw_stock_data\"\n",
+    "df = pd.read_sql(query, engine)\n",
+    "print(df.head(10))"
    ]
   },
   {
